(library
 (public_name dkml-component-staging-curl)
 (name dkml_component_staging_curl)
 (libraries
  dkml-install.register
  dune-site
  dkml-component-staging-ocamlrun.api
  bos
  logs))

(plugin
 ; plugin name must be globally unique, and not clash with a library name
 (name dkml-plugin-staging-curl)
 (libraries dkml-component-staging-curl)
 (site
  (dkml-install-runner plugins)))
